--- a/calc_Financ.html
+++ b/calc_Financ.html
@@ -11,7 +11,7 @@
 <body class="corpo">
     <div class="container">
         <div>
-            <img class="img" src="./logo.jpeg" alt="Logo do projeto">
+            <img class="img" src="./imagens/logo.jpeg" alt="Logo do projeto">
         </div>
         <div class="divisoria">
             <h1 class="titulo">Olá, seja bem vindo a Calculadora Financeira do Projeto SensSky</h1>
